--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "test": "jest --coverage --noStackTrace --silent"
+    "test": "jest --coverage --silent=false"
   },
   "jest": {
     "verbose": false,
@@ -18,6 +18,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@babel/plugin-proposal-throw-expressions": "^7.18.6",
     "express": "^4.17.1",
     "global": "^4.4.0",
     "jquery": "^3.5.1",
